--- a/capstoneProject/MD/app/src/main/res/values/colors.xml
+++ b/capstoneProject/MD/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="navigation">#EBEDF2</color>
     <color name="title">#333F5F</color>
     <color name="button">#506293</color>
+    <color name="card">#C7D2EF</color>
+    <color name="history_card">#C4C4C4</color>
 </resources>
