--- a/capstoneProject/MD/app/src/main/res/layout/activity_main.xml
+++ b/capstoneProject/MD/app/src/main/res/layout/activity_main.xml
@@ -2,142 +2,35 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    >
-    <!-- Appbar -->
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/topNavbar"
-        android:layout_width="match_parent"
+    android:background="@color/white">
+
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_marginStart="0dp"
+        android:layout_marginEnd="0dp"
+        app:itemIconTint="@color/button"
+        app:itemTextColor="#3E3E3E"
+        android:background="@color/navigation"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:menu="@menu/bottom_nav_menu" />
 
-        <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/topAppBar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:minHeight="?attr/actionBarSize"
-            app:title="@string/result_title"
-            android:background="@color/white"
-            app:navigationIcon="@drawable/ic_back" />
-
-    </com.google.android.material.appbar.AppBarLayout>
-
-    <!-- StuntBar -->
-   <LinearLayout
-       android:id="@+id/stuntBar"
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       app:layout_constraintTop_toBottomOf="@+id/topNavbar"
-       android:orientation="horizontal"
-       android:layout_marginHorizontal="16dp"
-       android:layout_marginVertical="16dp">
-
-       <ImageView
-           android:layout_width="40dp"
-           android:layout_height="40dp"
-           android:src="@drawable/babyIcon_cry"/>
-
-       <com.google.android.material.slider.RangeSlider
-           android:id="@+id/statusRangeSlider"
-           android:layout_width="0dp"
-           android:layout_height="wrap_content"
-           app:trackColor="@color/material_dynamic_neutral90"
-           android:enabled="false"
-           android:stepSize="1"
-           android:valueFrom="0"
-           android:valueTo="4"
-           android:layout_weight="3"
-            />
-
-       <ImageView
-           android:layout_width="40dp"
-           android:layout_height="40dp"
-           android:src="@drawable/babyicon_smile"/>
-   </LinearLayout>
-
-    <!-- StuntResult -->
-    <TextView
-        android:id="@+id/stuntResult"
+    <fragment
+        android:id="@+id/nav_host_fragment_activity_main"
+        android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:text="@string/Stunt_status"
-        android:textSize="20sp"
-        android:gravity="center"
-        app:layout_constraintTop_toBottomOf="@+id/stuntBar"/>
-
-    <TextView
-        android:id="@+id/stuntDisclaimer"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginVertical="8dp"
-        android:text="@string/Stunt_disclaimer"
-        android:textSize="16sp"
-        app:layout_constraintTop_toBottomOf="@+id/stuntResult"/>
-
-    <!-- QuickTips -->
-    <TextView
-        android:id="@+id/tips_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:text="@string/tips"
-        android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@+id/stuntDisclaimer"/>
-
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/tips_card"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/card"
-        android:layout_margin="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/tips_title">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingHorizontal="16dp"
-            android:paddingVertical="8dp">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/tips_title"
-                android:textColor="@color/title"
-                android:textAppearance="?attr/textAppearanceTitleMedium"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginVertical="8dp"
-                android:text="@string/tips_list"
-                android:textColor="@color/title"
-                android:textAppearance="?attr/textAppearanceBodyMedium"
-                />
-        </LinearLayout>
-
-    </com.google.android.material.card.MaterialCardView>
-
-    <!-- Article -->
-    <TextView
-        android:id="@+id/article_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:text="@string/article"
-        android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@+id/tips_card"/>
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_event"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
-        android:overScrollMode="never"
-        android:scrollbarSize="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/article_title"
-         />
-
-
+        android:layout_height="match_parent"
+        app:defaultNavHost="true"
+        app:layout_constraintBottom_toTopOf="@id/nav_view"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:navGraph="@navigation/mobile_navigation" />
 </androidx.constraintlayout.widget.ConstraintLayout>
