add animation at welcome activity, update kotlin version

--- a/capstoneProject/MD/app/src/main/res/layout/activity_welcome.xml
+++ b/capstoneProject/MD/app/src/main/res/layout/activity_welcome.xml
@@ -33,7 +33,9 @@
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintHorizontal_bias="0.515"
         app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        android:alpha="0"
+        tools:alpha="100"/>
 
     <TextView
         android:id="@+id/textView3"
@@ -47,7 +49,9 @@
         app:layout_constraintEnd_toEndOf="@+id/textView"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        android:alpha="0"
+        tools:alpha="100"/>
 
     <Button
         android:id="@+id/button_started"
@@ -62,5 +66,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.550"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        android:alpha="0"
+        tools:alpha="100"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
