--- a/capstoneProject/MD/app/src/main/res/layout/activity_result.xml
+++ b/capstoneProject/MD/app/src/main/res/layout/activity_result.xml
@@ -20,6 +20,8 @@
             android:layout_height="wrap_content"
             android:minHeight="?attr/actionBarSize"
             app:title="@string/result_title"
+            android:textStyle="bold"
+            android:fontFamily="@font/gentium_basic"
             android:background="@color/white"
             app:navigationIcon="@drawable/ic_back" />
 
@@ -65,6 +67,8 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:text="@string/Stunt_status"
+        android:textStyle="bold"
+        android:fontFamily="@font/gentium_basic"
         android:textSize="20sp"
         android:gravity="center"
         app:layout_constraintTop_toBottomOf="@+id/stuntBar"/>
@@ -76,6 +80,7 @@
         android:layout_marginHorizontal="16dp"
         android:layout_marginVertical="8dp"
         android:text="@string/Stunt_disclaimer"
+        android:fontFamily="@font/gentium_basic"
         android:textSize="16sp"
         app:layout_constraintTop_toBottomOf="@+id/stuntResult"/>
 
@@ -86,6 +91,8 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:text="@string/tips"
+        android:textStyle="bold"
+        android:fontFamily="@font/gentium_basic"
         android:textSize="20sp"
         app:layout_constraintTop_toBottomOf="@+id/stuntDisclaimer"/>
 
@@ -129,6 +136,8 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:text="@string/article"
+        android:textStyle="bold"
+        android:fontFamily="@font/gentium_basic"
         android:textSize="20sp"
         app:layout_constraintTop_toBottomOf="@+id/tips_card"/>
 
