--- a/capstoneProject/MD/app/src/main/res/layout/card_history.xml
+++ b/capstoneProject/MD/app/src/main/res/layout/card_history.xml
@@ -18,6 +18,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/name"
+                android:textStyle="bold"
+                android:fontFamily="@font/gentium_basic"
                 android:textColor="@color/title"
                 android:textAppearance="?attr/textAppearanceTitleMedium"
                 />
@@ -27,6 +29,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="8dp"
                 android:text="@string/Stunt_status"
+                android:fontFamily="@font/gentium_basic"
                 android:textColor="@color/title"
                 android:textAppearance="?attr/textAppearanceBodyMedium"
                 />
@@ -36,6 +39,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="8dp"
                 android:text="@string/app_name"
+                android:fontFamily="@font/gentium_basic"
                 android:layout_gravity="end"
                 android:textColor="@color/title"
                 android:textAppearance="?attr/textAppearanceBodyMedium"
