--- a/capstoneProject/MD/app/src/main/res/layout/fragment_tracking.xml
+++ b/capstoneProject/MD/app/src/main/res/layout/fragment_tracking.xml
@@ -14,6 +14,8 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:text="@string/Stunt_detect"
+        android:textStyle="bold"
+        android:fontFamily="@font/gentium_basic"
         android:textColor="@color/title"
         android:textSize="40sp"
         app:layout_constraintTop_toTopOf="parent"
@@ -25,6 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/name"
+        android:fontFamily="@font/gentium_basic"
         android:textSize="24sp"
         android:textColor="@color/title"
         android:layout_marginHorizontal="16dp"
@@ -52,6 +55,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/age"
+        android:fontFamily="@font/gentium_basic"
+        android:textFontWeight="@integer/material_motion_duration_long_1"
         android:textSize="24sp"
         android:textColor="@color/title"
         android:layout_marginHorizontal="16dp"
@@ -78,6 +83,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/height"
+        android:fontFamily="@font/gentium_basic"
         android:textSize="24sp"
         android:textColor="@color/title"
         android:layout_marginHorizontal="16dp"
@@ -120,7 +126,9 @@
                 android:enabled="true"
                 android:checked="false"
                 android:textSize="24sp"
-                android:text="@string/radiobutton_male"/>
+                android:text="@string/radiobutton_male"
+                android:fontFamily="@font/gentium_basic"
+                />
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -128,7 +136,9 @@
                 android:enabled="true"
                 android:textSize="24sp"
                 android:layout_marginStart="16dp"
-                android:text="@string/radiobutton_female"/>
+                android:text="@string/radiobutton_female"
+                android:fontFamily="@font/gentium_basic"
+                />
         </RadioGroup>
     </LinearLayout>
 
