--- a/capstoneProject/MD/app/src/main/res/layout/fragment_history.xml
+++ b/capstoneProject/MD/app/src/main/res/layout/fragment_history.xml
@@ -4,45 +4,33 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    android:paddingTop="?attr/actionBarSize">
+    android:paddingTop="25dp">
 
     <!-- Title-->
     <TextView
         android:id="@+id/history_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
+        android:layout_marginHorizontal="30dp"
         android:text="@string/history_title"
-        android:textStyle="bold"
         android:fontFamily="@font/gentium_basic"
         android:textColor="@color/title"
         android:textSize="40sp"
         app:layout_constraintTop_toTopOf="parent"
         />
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:layout_marginTop="8dp"
-    app:layout_constraintTop_toBottomOf="@id/history_title">
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_history"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:listitem="@layout/card_history" />
-</LinearLayout>
+        android:orientation="vertical"
+        android:layout_marginTop="8dp"
+        android:paddingBottom="202dp"
+        app:layout_constraintTop_toBottomOf="@id/history_title">
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_history"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:listitem="@layout/card_history" />
+    </LinearLayout>
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/nav_view"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="0dp"
-        android:layout_marginEnd="0dp"
-        app:itemIconTint="@color/button"
-        app:itemTextColor="#3E3E3E"
-        android:background="@color/navigation"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:menu="@menu/bottom_nav_menu" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
