--- a/capstoneProject/MD/app/src/main/res/values/colors.xml
+++ b/capstoneProject/MD/app/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
     <color name="title">#333F5F</color>
     <color name="button">#506293</color>
     <color name="card">#C7D2EF</color>
-    <color name="history_card">#C4C4C4</color>
+    <color name="history_card">#F3F3F3</color>
+    <color name="history_date">#979797</color>
 </resources>
