--- a/capstoneProject/MD/app/src/main/res/layout/card_history.xml
+++ b/capstoneProject/MD/app/src/main/res/layout/card_history.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     app:cardBackgroundColor="@color/history_card"
     android:layout_marginHorizontal="30dp"
-    android:layout_marginTop="18dp"
+    android:layout_marginBottom="15dp"
     app:strokeWidth="0dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
