--- a/capstoneProject/MD/app/src/main/res/layout/fragment_history.xml
+++ b/capstoneProject/MD/app/src/main/res/layout/fragment_history.xml
@@ -12,25 +12,38 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30dp"
+        android:paddingBottom="5dp"
         android:text="@string/history_title"
         android:fontFamily="@font/gentium_basic"
         android:textColor="@color/title"
         android:textSize="40sp"
-        app:layout_constraintTop_toTopOf="parent"
-        />
-    <LinearLayout
-        android:layout_width="match_parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_history"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:overScrollMode="never"
+        android:scrollbarSize="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/nav_view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/history_title"
+        tools:listitem="@layout/card_history" />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginTop="8dp"
-        android:paddingBottom="202dp"
-        app:layout_constraintTop_toBottomOf="@id/history_title">
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_history"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:listitem="@layout/card_history" />
-    </LinearLayout>
+        android:layout_marginStart="0dp"
+        android:layout_marginEnd="0dp"
+        app:itemIconTint="@color/button"
+        app:itemTextColor="#3E3E3E"
+        android:background="@color/navigation"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:menu="@menu/bottom_nav_menu" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
