--- a/capstoneProject/MD/app/src/main/res/layout/activity_result.xml
+++ b/capstoneProject/MD/app/src/main/res/layout/activity_result.xml
@@ -51,8 +51,7 @@
             android:stepSize="1"
             android:valueFrom="0"
             android:valueTo="4"
-            android:layout_weight="3"
-            />
+            android:layout_weight="3" />
 
         <ImageView
             android:layout_width="40dp"
