menampilkan response API untuk halman artikel dan detail artikel, loading inputan tracking, reset inputan setelah terkiriim

--- a/capstoneProject/MD/app/src/main/res/layout/fragment_news.xml
+++ b/capstoneProject/MD/app/src/main/res/layout/fragment_news.xml
@@ -24,7 +24,7 @@
         tools:layout_editor_absoluteX="0dp" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_event"
+        android:id="@+id/rv_news"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:overScrollMode="never"
