--- a/capstoneProject/MD/app/src/main/res/layout/activity_news_details.xml
+++ b/capstoneProject/MD/app/src/main/res/layout/activity_news_details.xml
@@ -27,9 +27,10 @@
 
         <ImageView
             android:id="@+id/back_details"
-            android:layout_width="77dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="20dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_back" />
@@ -61,7 +62,7 @@
                     android:id="@+id/text_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="12 Nov 2024"
+                    android:text="Date"
                     android:fontFamily="@font/nunito"
                     android:textColor="@color/black"
                     android:textSize="14sp" />
@@ -98,8 +99,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:layout_marginStart="25dp"
-            android:layout_marginEnd="25dp"
+            android:paddingHorizontal="25dp"
+            android:textColor="@color/black"
             android:text="News description"
             android:fontFamily="@font/nunito"
             app:layout_constraintEnd_toEndOf="parent"
