--- a/capstoneProject/MD/app/src/main/res/layout/card_news.xml
+++ b/capstoneProject/MD/app/src/main/res/layout/card_news.xml
@@ -23,7 +23,7 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/event_image"
+                android:id="@+id/news_image"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:scaleType="centerCrop"
@@ -34,7 +34,7 @@
     </androidx.cardview.widget.CardView>
 
     <TextView
-        android:id="@+id/event_title"
+        android:id="@+id/news_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
