--- a/capstoneProject/MD/app/src/main/res/layout/fragment_history.xml
+++ b/capstoneProject/MD/app/src/main/res/layout/fragment_history.xml
@@ -6,6 +6,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:paddingTop="25dp">
 
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/loadingAnimation"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:visibility="visible"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/baby_animation" />
+
     <!-- Title-->
     <TextView
         android:id="@+id/history_title"
