--- a/capstoneProject/MD/app/src/main/res/layout/activity_news_details.xml
+++ b/capstoneProject/MD/app/src/main/res/layout/activity_news_details.xml
@@ -65,7 +65,7 @@
                     android:text="Date"
                     android:fontFamily="@font/nunito"
                     android:textColor="@color/black"
-                    android:textSize="14sp" />
+                    android:textSize="12sp" />
 
                 <!-- Title -->
                 <TextView
@@ -100,6 +100,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:paddingHorizontal="25dp"
+            android:justificationMode="inter_word"
             android:textColor="@color/black"
             android:text="News description"
             android:fontFamily="@font/nunito"
